--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint:fix": "eslint . --fix"
   },
   "dependencies": {
+    "@fontsource/noto-serif": "^4.5.11",
     "daisyui": "^2.51.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
